# mentor

./: Cargo.toml  LICENSE  README.md
iidm/: Cargo.toml  a_supprimer.rs
iidm-derive/: Cargo.toml
iidm-derive/src/: identifiable.rs  lib.rs  updatable.rs
iidm/src/: lib.rs
iidm/src/builder/: mod.rs
iidm/src/entities/: identifiable.rs  json.rs  mod.rs  updatable.rs  xml.rs
iidm/src/extensions/: mod.rs
iidm/src/libs/: json.rs
iidm/src/plugins/: mod.rs
iidm/src/resources/: mod.rs
iidm/tests/: README.md  main.rs
iidm/tests/data/: network.json  simple-eu.json
iidm/tests/it/: mod.rs
iidm/tests/it/iidm/: mod.rs
iidm/tests/it/iidm/current_limit/: update.rs
iidm/tests/it/iidm/line/: mod.rs  serialization.rs  update.rs
iidm/tests/it/iidm/network/: identifiable.rs  mod.rs  serialization.rs  update.rs  xml.rs
iidm/tests/it/iidm/temporary_limit/: update.rs
iidm/tests/pt/libs/: json.rs
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/handlers/: increment.rs  index.rs  mod.rs  stream_iidm.rs  update_iidm.rs  upload_iidm.rs
server/src/handlers/streams/: mod.rs
server/src/handlers/streams/iidm/: mod.rs
server/src/states/: ecs.rs  mod.rs
server/src/states/ecs/: sse_registry.rs  update_registry.rs
server/templates/: counter.html  iidm_table.html  index.html
