[workspace]
members = ["iidm", "iidm-derive", "server"]
resolver = "2"

[workspace.dependencies]
bevy_ecs = "0.15.2"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"

[profile.dev]
debug = 1

[profile.dev.package]
# These speed up local tests.
serde.opt-level = 3

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[profile.dev-rel]
inherits = "release"
debug = 2
