[package]
name = "iidm"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy_ecs = { workspace = true }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { workspace = true }
serde_json = "1.0.138"
iidm-derive = { path = "../iidm-derive" }
thiserror = { workspace = true }
schemars = { version = "0.8.21", features = ["chrono"] }
jsonschema = "0.29.0"
derive_more = { version = "2.0.1", features = ["full"] }
enum_dispatch = "0.3.13"
quick-xml = { version = "0.37.2", features = ["serialize"] }

[dev-dependencies]
proptest = "1.6.0"
