[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version="0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
bevy_ecs = { workspace = true }
futures = "0.3.31"
iidm = {  path = "../iidm" }
paste = "1.0.15"
serde.workspace = true
serde_json = "1.0.139"
thiserror = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version="0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
